--- a/opera.html
+++ b/opera.html
@@ -10,42 +10,44 @@
     <h3>The Gondoliers</h4>
         <h4>ACT I 
             The Piazzetta, Venice</h4>
-        <p style="color:green" > Scene.— the Piazzetta, Venice. The Ducal Palace on the right.
+        <p style="color:green" >ACT I Scene.— the Piazzetta, Venice. The Ducal Palace on the right.
 
             Fiametta, Giulia, Vittoria, and other Contadine discovered, each
             tying a bouquet of roses.</p>
+            <br>
         <p style="color:red">(During this chorus Antonio, Francesco, Giorgio, and other
             Gondoliers have entered unobserved by the Girls—at first two,
             then two more, then four, then half a dozen, then the remainder
             of the Chorus.)</p>
-        <p>FRANC. Good morrow, pretty maids; for whom prepare ye
+            <br>
+        <p>FRANC.<br> Good morrow, pretty maids; for whom prepare ye
             These floral tributes extraordinary?
-
-            FIA. For Marco and Giuseppe Palmieri,
+             <br>
+            FIA.<br> For Marco and Giuseppe Palmieri,
             The pink and flower of all the Gondolieri.
-
-            GIU. They're coming here, as we have heard but lately,
+            <br>
+            GIU.<br> They're coming here, as we have heard but lately,
             To choose two brides from us who sit sedately.
-
-            ANT. Do all you maidens love them?
-
-            ALL. Passionately!
-
-            ANT. These gondoliers are to be envied greatly!
-
-            GIOR. But what of us, who one and all adore you?
+            <br>
+            ANT.<br> Do all you maidens love them?
+            <br>
+            ALL.<br> Passionately!
+            <br>
+            ANT.<br>These gondoliers are to be envied greatly!
+            <br>
+            GIOR.<br> But what of us, who one and all adore you?
             Have pity on our passion, we implore you!
-
-            FIA. These gentlemen must make their choice before you;
-
-            VIT. In the meantime we tacitly ignore you.
-
-            GIU. When they have chosen two that leaves you plenty—
+            <br>
+            FIA.<br> These gentlemen must make their choice before you;
+            <br>
+            VIT.<br> In the meantime we tacitly ignore you.
+            <br>
+            GIU.<br> When they have chosen two that leaves you plenty—
             Two dozen we, and ye are four-and-twenty.
-
+            <br>
             FIA. and VIT. Till then, enjoy your dolce far niente.
 
-            ANT. With pleasure, nobody contradicente!
+            ANT.<br> With pleasure, nobody contradicente!
         </p>
         </h5>
 </body>
