--- a/opera.html
+++ b/opera.html
@@ -37,7 +37,7 @@
             <p>
             <h6>ANT.</h6>These gondoliers are to be envied greatly!</p>
             <p>
-            <h6>GIO.</h6>But what of us, who one and all adore you?
+            <h6>GIOR.</h6>But what of us, who one and all adore you?
             Have pity on our passion, we implore you!</p>
             <p>
             <h6>FIA</h6>These gentlemen must make their choice before you;</p>
@@ -47,7 +47,7 @@
             <h6>GIU</h6>When they have chosen two that leaves you plenty—
             Two dozen we, and ye are four-and-twenty.</p>
             <p>
-            <h6>FIA.</h6>and <h6>VIT.</h6>Till then, enjoy your dolce far niente.
+            <h6>FIA.and VIT.</h6>Till then, enjoy your dolce far niente.
             </p>
            <p> <h6>ANT.</h6>With pleasure, nobody contradicente!</p>
 
