--- a/opera.html
+++ b/opera.html
@@ -2,54 +2,89 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="gs.css">
     <title> Basic HTML Structure</title>
 </head>
 
 <body>
     <h3>Achyutha reddy Gantla Productions LTD </h3>
-    <h5>The Gondoliers</h4>
-        <h6>ACT I
-            The Piazzetta, Venice</h4>
-            <p>ACT I Scene.— the Piazzetta, Venice. The Ducal Palace on the right.
+    <h5>The Gondoliers</h5>
+    <h6>ACT I
+        The Piazzetta, Venice</h6>
+    <p>ACT I Scene.— the Piazzetta, Venice. The Ducal Palace on the right.
 
-                Fiametta, Giulia, Vittoria, and other Contadine discovered, each
-                tying a bouquet of roses.</p>
-            <br>
-            <p>(During this chorus Antonio, Francesco, Giorgio, and other
-                Gondoliers have entered unobserved by the Girls—at first two,
-                then two more, then four, then half a dozen, then the remainder
-                of the Chorus.)</p>
+        Fiametta, Giulia, Vittoria, and other Contadine discovered, each
+        tying a bouquet of roses.</p>
+    <br>
+    <p class="direction">(During this chorus Antonio, Francesco, Giorgio, and other
+        Gondoliers have entered unobserved by the Girls—at first two,
+        then two more, then four, then half a dozen, then the remainder
+        of the Chorus.)</p>
 
-            <p>
-            <h6>FRANC.</h6>Good morrow, pretty maids; for whom prepare ye
-            These floral tributes extraordinary?</p>
-            <p>
-            <h6>FIA.</h6>For Marco and Giuseppe Palmieri,
-            The pink and flower of all the Gondolieri.</p>
-            <p>
-            <h6>GIU.</h6>They're coming here, as we have heard but lately,
-            To choose two brides from us who sit sedately.</p>
-            <p>
-            <h6>ANT.</h6>Do all you maidens love them?</p>
 
-            <p>
-            <h6>ALL</h6> Passionately!</p>
-            <p>
-            <h6>ANT.</h6>These gondoliers are to be envied greatly!</p>
-            <p>
-            <h6>GIOR.</h6>But what of us, who one and all adore you?
-            Have pity on our passion, we implore you!</p>
-            <p>
-            <h6>FIA</h6>These gentlemen must make their choice before you;</p>
-            <p>
-            <h6>VIT</h6>In the meantime we tacitly ignore you.</p>
-            <p>
-            <h6>GIU</h6>When they have chosen two that leaves you plenty—
-            Two dozen we, and ye are four-and-twenty.</p>
-            <p>
-            <h6>FIA.and VIT.</h6>Till then, enjoy your dolce far niente.
-            </p>
-           <p> <h6>ANT.</h6>With pleasure, nobody contradicente!</p>
+    <h6 class="FRANC">FRANC</h6>
+    <P CLASS="speech">Good morrow, pretty maids; for whom prepare ye
+        These floral tributes extraordinary?</p>
+
+    <h6 class="FIA">FIA</h6>
+    <p class="speech">For Marco and Giuseppe Palmieri,
+        The pink and flower of all the Gondolieri.</p>
+
+    <h6 class="GIU">GIU</h6>
+    <p class="speech">They're coming here, as we have heard but lately,
+        To choose two brides from us who sit sedately.</p>
+
+    <h6 class="ANT">ANT</h6>
+    <p>Do all you maidens love them?</p>
+
+
+    <h6 class="ALL">ALL</h6>
+    <p class="speech">Passionately!</p>
+
+    <h6 class="ANT">ANT</h6>
+    <p class="speech">These gondoliers are to be envied greatly!</p>
+
+    <h6 class="GIOR">GIOR</h6>
+    <p class="speech">But what of us, who one and all adore you?
+        Have pity on our passion, we implore you!</p>
+
+    <h6 class="FIA">FIA</h6>
+    <p class="speech">These gentlemen must make their choice before you;</p>
+
+    <h6 class="VIT">VIT</h6>
+    <p class="speech">In the meantime we tacitly ignore you.</p>
+
+    <h6 class="GIU">GIU</h6>
+    <p class="speech">When they have chosen two that leaves you plenty—
+        Two dozen we, and ye are four-and-twenty.</p>
+
+    <h6 class="both">FIA and VIT</h6>Till then, enjoy your dolce far niente.
+    </p>
+
+    <h6 class="ANT">ANT.</h6>
+    <p class="speech">With pleasure, nobody contradicente!</p>
+    <table>
+        <tr>
+            <th>Character</th>
+            <th>Singer</th>
+            <th>Offer</th>
+        </tr>
+        <tr>
+            <td>FIA</td>
+            <td>chitra</td>
+            <td>180000</td>
+        </tr>
+        <tr>
+            <td>FRANC</td>
+            <td>Geetha Madhuri</td>
+            <td>200000</td>
+        </tr>
+        <tr>
+            <td>GIOR</td>
+            <td>Hema Chandra</td>
+            <td>56000</td>
+        </tr>
+    </table>
 
 </body>
 
