added LINKS TO OPERA2

--- a/opera2.html
+++ b/opera2.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="gs.css">
-    <title> Basic HTML Structure</title>
+    <title> And the show goes on</title>
 </head>
 
 <body>
@@ -29,40 +29,7 @@
     <h6 class="FIA">FIA</h6>
     <p class="speech">For Marco and Giuseppe Palmieri,
         The pink and flower of all the Gondolieri.</p>
-
-    <h6 class="GIU">GIU</h6>
-    <p class="speech">They're coming here, as we have heard but lately,
-        To choose two brides from us who sit sedately.</p>
-
-    <h6 class="ANT">ANT</h6>
-    <p>Do all you maidens love them?</p>
-
-
-    <h6 class="ALL">ALL</h6>
-    <p class="speech">Passionately!</p>
-
-    <h6 class="ANT">ANT</h6>
-    <p class="speech">These gondoliers are to be envied greatly!</p>
-
-    <h6 class="GIOR">GIOR</h6>
-    <p class="speech">But what of us, who one and all adore you?
-        Have pity on our passion, we implore you!</p>
-
-    <h6 class="FIA">FIA</h6>
-    <p class="speech">These gentlemen must make their choice before you;</p>
-
-    <h6 class="VIT">VIT</h6>
-    <p class="speech">In the meantime we tacitly ignore you.</p>
-
-    <h6 class="GIU">GIU</h6>
-    <p class="speech">When they have chosen two that leaves you plenty—
-        Two dozen we, and ye are four-and-twenty.</p>
-
-    <h6 class="both">FIA and VIT</h6>Till then, enjoy your dolce far niente.
-    </p>
-
-    <h6 class="ANT">ANT.</h6>
-    <p class="speech">With pleasure, nobody contradicente!</p>
+    
     <table>
         <tr>
             <th>Character</th>
@@ -85,7 +52,7 @@
             <td>56000</td>
         </tr>
     </table>
-    <a href="opera2.html">OPEN</a>
+    <a href="opera.html">OPEN</a>
 
 </body>
 
