--- a/opera.html
+++ b/opera.html
@@ -86,7 +86,12 @@
         </tr>
     </table>
     <a href="opera2.html">OPEN</a>
-
+    <i class="fa fa-cloud w3-xxxlarge"></i>
+    <img src="download.jpg">
+    <ul class="navbar-horizontal">
+        <li><a href="opera.html">page 1 opera</a></li>
+        <li><a href="opera2.html">page 2 opera</a></li>
+    </ul>
 </body>
 
 </html>
