--- a/opera2.html
+++ b/opera2.html
@@ -53,6 +53,10 @@
         </tr>
     </table>
     <a href="opera.html">OPEN</a>
+    <ul class="navbar-horizontal">
+        <li><a href="opera.html">page 1 opera</a></li>
+        <li><a href="opera2.html">page 2 opera</a></li>
+    </ul>
 
 </body>
 
