added images file

--- a/opera2.html
+++ b/opera2.html
@@ -54,8 +54,8 @@
     </table>
     <a href="opera.html">OPEN</a>
     <ul class="navbar-horizontal">
-        <li><a href="opera.html">page 1 opera</a></li>
-        <li><a href="opera2.html">page 2 opera</a></li>
+        <li><a href="opera.html">page opera</a></li>
+        <li><a href="opera2.html">page opera2</a></li>
     </ul>
 
 </body>
