--- a/opera.html
+++ b/opera.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="gs.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <title> Basic HTML Structure</title>
 </head>
 
@@ -86,11 +87,11 @@
         </tr>
     </table>
     <a href="opera2.html">OPEN</a>
-    <i class="fa fa-cloud w3-xxxlarge"></i>
-    <img src="download.jpg">
+    <i class="fa fa-camera"></i>
+    <img src="camera img.jpg" width="250" height="250">
     <ul class="navbar-horizontal">
-        <li><a href="opera.html">page 1 opera</a></li>
-        <li><a href="opera2.html">page 2 opera</a></li>
+        <li><a href="opera.html">page opera</a></li>
+        <li><a href="opera2.html">page opera2</a></li>
     </ul>
 </body>
 
